<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dogquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margins8"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="@dimen/title" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margins8"
            android:src="@drawable/alldogs" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margins8"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:singleLine="true"

            />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margins8"
            android:text=""
            android:textAlignment="center"
            android:textSize="@dimen/question"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margins8"
                    android:paddingLeft="@dimen/margins8"
                    android:text=""
                    android:textSize="@dimen/answer" />

                <RadioButton
                    android:id="@+id/answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margins8"
                    android:paddingLeft="@dimen/margins8"
                    android:text=""
                    android:textSize="@dimen/answer" />

                <RadioButton
                    android:id="@+id/answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margins8"
                    android:paddingLeft="@dimen/margins8"
                    android:text=""
                    android:textSize="@dimen/answer" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margins8"
                android:paddingLeft="@dimen/margins8"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margins8"
                android:paddingLeft="@dimen/margins8"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margins8"
                android:paddingLeft="@dimen/margins8"
                android:visibility="gone" />
        </LinearLayout>

        <EditText
            android:id="@+id/lastQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margins8"
            android:hint="@string/hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/startQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="startQuiz"
            android:text="@string/start" />

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="endQuiz"
            android:text="@string/check"
            android:visibility="gone" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="next"
            android:text="@string/next"
            android:visibility="gone" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="restart"
            android:text="@string/restart"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>

